tests/error/enum_defined_var.gw
// [contains] already declared as variable
 enum
{
	first,
	first
};
